# foxtrot

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  build_developer_package.sh  conan_workspace.yml  conanfile.py  conanfile.txt  conanfile_old.txt  conanws.py  foxtrot.kdev4  foxtrot.org  pyproject.toml  todo.org
client/: CMakeLists.txt  client.cpp  client.h  conanfile.py  fetchdatatest.cpp  flagtest.cpp
client/cmake/: foxtrotClientConfig.cmake.in
client/src/: client.cpp
core/: CMakeLists.txt  conanfile.py
core/cmake/: Findgrpc.cmake  Findlibudev.cmake  Findlibusb.cmake  FoxtrotCommonSetup.cmake  GitVersion.cmake  findpkgconfiglibrarygeneric.cmake.in  foxtrotCoreConfig.cmake.in  foxtrotGenericConfig.cmake.in
core/devprogs/: CMakeLists.txt  arith_test.cpp  byte_convert_play.cpp  m30x_stage_discover_play.cpp  plugin_example.cpp  plugin_play.cpp  timestamp_play.cpp  tuple_play.cpp  udev_play.cpp  union_play.cpp
core/proto/: CMakeLists.txt  foxtrot.proto  ft_auth.proto  ft_capability.proto  ft_error.proto  ft_flags.proto  ft_sessions.proto  ft_streams.proto  ft_types.proto
core/share/: version.cpp.in  version.h.in
core/src/: CmdDevice.cpp  ContentionError.cpp  Device.cpp  DeviceError.cpp  DeviceFactory.cpp  DeviceHarness.cpp  Error.cpp  ExperimentalSetup.cpp  HandleManager.cpp  Logging.cpp  ProtocolError.cpp  ProtocolTimeoutError.cpp  ReflectionError.cpp  ServerError.cpp  StubError.cpp  TelemetryError.cpp  backward.cpp  config.cpp  ft_optional_helper.cpp  ft_tuple_helper.cc  ft_union_helper.cc  typeUtil.cpp
dashboard/: CMakeLists.txt  dashboard.cpp  dashboard_main.cpp  dashboard_main.h  dashboard_main.ui
dashboard2/: CMakeLists.txt  dashboard2.cpp  dashboard2_main.cpp
devices/: CMakeLists.txt  conanfile.py
devices/BME280/: BME280.cpp  BME280.h  CMakeLists.txt  bme280_play.cpp
devices/BSC203/: APT.cpp  APT.h  BSC203.cpp  BSC203.h  CMakeLists.txt  TIM101.cpp  TIM101.h  bsc_play.cpp  thorlabs_ident_play.cpp  tim_play.cpp
devices/DLP-IOR4/: CMakeLists.txt  DLP_IOR4.cpp  DLP_IOR4.hh
devices/DM3068/: CMakeLists.txt  DM3068.cpp  DM3068.h  DM3068_play.cpp
devices/OPS-Q250/: CMakeLists.txt  Q250.cpp  Q250.h  Q250_play.cpp
devices/Pfeiffer/: CMakeLists.txt  Pfeiffer.cpp  Pfeiffer.h  TC110.h  TPG362.cpp  TPG362.h  TPG362_play.cpp  TPG366_network_play.cpp
devices/RLY-8/: CMakeLists.txt  RLY_8.cpp  RLY_8.hh  rly_8_play.cpp
devices/TPG362/: CMakeLists.txt  Pfeiffer.cpp  Pfeiffer.h  TC110.cpp  TC110.h  TPG362.cpp  TPG362.h  TPG362_play.cpp  test_checksum.cpp
devices/Thorlabs_APT/: APT.cpp  APT.h  APT_defaultdest.cpp  APT_defaultdest.hh  APT_defs.hh  BSC203.cpp  BSC203.h  CMakeLists.txt  M30X.cpp  TIM101.cpp  TIM101.h  thorlabs_ident_play.cpp
devices/aravis_camera/: CMakeLists.txt  aravis_camera.cpp  aravis_camera.hh  lucid_genicam_dump.xml
devices/archon/: #archon_test.cpp#  CMakeLists.txt  archon.cpp  archon.h  archon_GPIO.cpp  archon_GPIO.h  archon_autoupdate.cpp  archon_autoupdate.h  archon_defs.cpp  archon_defs.hh  archon_legacy.cpp  archon_legacy.h  archon_module_AD.cpp  archon_module_AD.h  archon_module_LVDS.cpp  archon_module_LVDS.hh  archon_module_driver.cpp  archon_module_driver.h  archon_module_generic_bias.cpp  archon_module_generic_bias.h  archon_module_heaterx.cpp  archon_module_heaterx.h  archon_module_hvxbias.cpp  archon_module_hvxbias.h  archon_module_legacy.cpp  archon_module_legacy.h  archon_module_lvxbias.cpp  archon_module_lvxbias.h  archon_module_mapper.cpp  archon_module_mapper.hh  archon_module_xvbias.cpp  archon_module_xvbias.h  archon_modules.cpp  archon_modules.h  archon_test.cpp  (+2 more)
expruns/: CMakeLists.txt  OPMD_setup.cpp  OPMD_setup.h  bakeout_tempread.cpp  detector_wl_sweep.cpp  simple_pressure_temp_log.cpp  wl_sweep_io.cpp
lsst/: CMakeLists.txt  CMakeLists.txt.orig  autofill_states.xmi  chiller_setup_funcs.cpp  chiller_setup_funcs.hh  conanfile.py  motor_test_setup.cpp  testbench_archon_heater.cpp  testbench_setup_funcs.cpp  testbench_setup_funcs.h  vacuum_pump_play.cpp
protocols/: BulkUSB.cpp  BulkUSB.h  CMakeLists.txt  SerialPort.cpp  SerialPort.h  characterdevice.cpp  characterdevice.h  chardevice_play.cpp  conanfile.py  curlRequest.cpp  curlRequest.h  curlrequest_play.cpp  i2c.cpp  i2c.h  scsiserial.cpp  scsiserial.h  serialport_play.cpp  simpleTCP.cpp  simpleTCP.h  simpletcp_play.cpp
pushbullet/: CMakeLists.txt  pushbullet_api.cpp  pushbullet_api.hh  pushbullet_play.cpp
server/: BroadcastNotificationImpl.cpp  CMakeLists.txt  CallData.cpp  CallData.h  CapabilityRequestImpl.cpp  CapabilityRequestImpl.h  ChunkStreamImpl.cpp  DeviceHarness.cpp  DeviceHarness.h  ExperimentalSetup.cpp  ExperimentalSetup.h  FetchDataImpl.cpp  FetchDataImpl.h  HandlerBase.cpp  HandlerBase.h  HandlerTag.h  InvokeCapabilityImpl.cpp  InvokeCapabilityImpl.h  ServerCommandImpl.cpp  ServerCommandImpl.h  ServerDescribeImpl.cpp  ServerDescribeImpl.h  ServerFlagsImpl.cpp  ServerFlagsImpl.h  ServerImpl.cpp  ServerImpl.h  ServerUtil.cpp  ServerUtil.h  conanfile.py  config.cpp  config.h  exptserve.cpp  exptserve.h  foxtrot.proto  harnesstest.cpp  testClient.cpp  testparams.json
setups/: CMakeLists.txt  dummy_setup.cpp  dummy_setup.h  setuptest.cpp.in  testbench_archon_heater.cpp  testbench_params.json  testbench_setup_funcs.cpp  testbench_setup_funcs.h  testbench_telemetry.json
src/: CMakeLists.txt  CmdDevice.cpp  CommunicationProtocol.cpp  ContentionError.cpp  Device.cpp  DeviceError.cpp  Error.cpp  ExperimentalSetup.cpp  Logging.cpp  ProtocolError.cpp  ProtocolTimeoutError.cpp  ProtocolUtilities.cpp  SerialProtocol.cpp  ServerError.cpp  StubError.cpp  TelemetryError.cpp  logdev.cpp
telemetry/: CMakeLists.txt  MQTTTransport.cpp  MQTTTransport.h  NanomsgTransport.cpp  NanomsgTransport.h  TelemetryClient.cpp  TelemetryClient.h  TelemetryServer.cpp  TelemetryServer.h  TelemetryTransport.cpp  TelemetryTransport.h  dummy_telem_config.json  telem_bcast.cpp  telem_recv_test.cpp  telem_test.cpp  telem_util.cpp  telem_util.h
watchdog/: CMakeLists.txt  WatchDogEvent.cpp  WatchDogEvent.h  WatchDogHeater.cpp  WatchDogHeater.h  watchdog.cpp
(+417 files in other folders)
