[project]
name = "pyfoxtrot"

#manual coding versions for now, sort it out properly later 
version = "0.3.0-alpha1"
description = "Client for Foxtrot RPC hardware server"
authors = [ { name="Dan Weatherill", email="daniel.weatherill@physics.ox.ac.uk" }]
packages = [ {include  = "pyfoxtrot", from="python"}
	   ]

dependencies = ["protobuf"]
requires-python=">=3.9"

[tool.hatch.build]
packages=["python/pyfoxtrot"]


[build-system]
requires = ["hatchling", "grpcio-tools"]
#build-backend = "poetry_dynamic_versioning.backend"
#build-backend = "poetry.core.masonry.api"
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path="python/hatch_build.py"
proto_source_dir="core/proto"
proto_output_dir="python/pyfoxtrot/protos"



